--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -537,7 +537,11 @@
       "ARCHIVED": "Audition archivée"
     },
     "BUTTON": {
-      "DOWNLOAD_CSV": "Download [CSV]"
+      "DOWNLOAD_CSV": "Download [CSV]",
+      "MANAGE_TIMETABLE_HEARING": "Contrôle de la consultation de l'horaire",
+      "ADD_NEW_STATEMENT": "Saisir un nouvel avis",
+      "ADD_NEW_TIMETABLE_HEARING": "Créer une nouvelle consultation sur les horaires",
+      "START_TIMETABLE_HEARING": "Lancer cette année d'horaire"
     },
     "SELECT_CANTON": "Sélectionner le canton",
     "SELECT_YEAR": "Sélectionner l'année",
