ATLAS-1015: detail page with footer

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -610,6 +610,10 @@
       "VS": "Wallis",
       "ZG": "Zug",
       "ZH": "Zürich"
+    },
+    "STATEMENT": {
+      "NEW": "Neue Stellungnahme erfassen",
+      "STATEMENT": "Stellungnahme"
     }
   }
 }
