--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -613,7 +613,19 @@
     },
     "STATEMENT": {
       "NEW": "Neue Stellungnahme erfassen",
-      "STATEMENT": "Stellungnahme"
+      "STATEMENT": "Stellungnahme",
+      "ROUTE": "Strecke",
+      "STOP_POINT": "Haltestelle",
+      "STOP_POINT_INFO": "Beschreibung der referenzierten Haltestelle",
+      "STATUS_JUSTIFICATION": "Status und Begründung",
+      "FIST_NAME": "Vorname",
+      "LAST_NAME": "Nachname",
+      "E_MAIL": "E-Mail",
+      "E_MAIL_TEXT": "Falls keine E-Mail vorhanden ist, reicht eine fiktive Eingabe z.B. xxx@xxx.ch",
+      "JUSTIFICATION": "Begründung",
+      "ATTATCHMENT_INFO": "Sie können die Stellungnahme mit PDF-Anhang einreichen.",
+      "ATTATCHMENT_BUTTON": "PDF anhängen",
+      "STATUS": "Status"
     }
   }
 }
