ATLAS-1015: ttfn select

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -630,7 +630,11 @@
       "ZIP": "PLZ",
       "CITY": "Ort/Stadt",
       "STREET": "Strasse",
-      "STATUS": "Status"
+      "STATUS": "Status",
+      "NOTIFICATION": {
+        "ADD_SUCCESS": "Neue Stellungnahme erfolgreich gespeichert.",
+        "EDIT_SUCCESS": "Die Stellungnahme wurde erfolgreich gespeichert."
+      }
     }
   }
 }
