--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -564,6 +564,15 @@
         }
       }
     },
+    "DIALOG": {
+      "NEW_PLAN_TIMETABLE": "Neue Fahrplananhörung anlegen",
+      "PLAN_DROPDOWN_TITLE": "Fahrplan",
+      "PLAN_DROPDOWN_DESCRIPTION": "Jahr auswählen",
+      "DATUM_FROM": "Anhörung von",
+      "DATUM_FROM_EXAMPLE": "z.B. 31.12.2023.",
+      "DATUM_UNTIL": "Anhörung bis",
+      "DATUM_UNTIL_EXAMPLE": "z.B. 31.12.2023."
+    },
     "SELECT_CANTON": "Kanton auswählen",
     "SELECT_YEAR": "Jahr auswählen",
     "TABLE_RESULT_HEADING": "{{totalCount}} Stellungnahmen für das Fahrplanjahr {{year}}",
