ATLAS-1006: add tests

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -600,7 +600,7 @@
       "NW": "Nidwalden",
       "OW": "Obwalden",
       "SG": "St. Gallen",
-      "SH": "Schaffausen",
+      "SH": "Schaffhausen",
       "SO": "Solothurn",
       "SZ": "Schwyz",
       "TG": "Thurgau",
