--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -570,7 +570,8 @@
       "OVERVIEW_PLANNED_SUBHEADING": "Hier finden Sie alle geplanten Fahrplananhörungen. Vor dem Start eines Fahrplanjahres können Sie keine Stellungnahmen erfassen.",
       "OVERVIEW_ARCHIVED_SUBHEADING": "Hier finden Sie alle archivierten Fahrplananhörungen nach Fahrplanjahren abgelegt.",
       "OVERVIEW_ACTUAL_NOT_FOUND_SUBHEADING_PREFIX": "Das Fahrplanjahr ist noch nicht eröffnet. Sie finden bereits vorhandene Stellungnahmen unter dem Reiter «Geplante Anhörungen». Das Fahrplanverfahren Schweiz des BAV für den Fahrplan {{timeTableYear}} wird von ",
-      "OVERVIEW_PLANNED_NOT_FOUND": "Derzeit sind keine Anhörungen geplant.",
+      "OVERVIEW_PLANNED_NOT_FOUND": "Aktuell ist keine geplante Anhörung erfasst.",
+      "OVERVIEW_ACTUAL_NO_PLANNED_HEARING_YEAR_FOUND": "Aktuell ist keine Anhörung aktiv.",
       "OVERVIEW_ARCHIVED_NOT_FOUND": "Es sind derzeit keine archivierten Anhörungen verfügbar."
     },
     "STATEMENT_STATUS": {
