ATLAS-1015: self review

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -624,8 +624,8 @@
       "E_MAIL": "E-Mail",
       "E_MAIL_TEXT": "Falls keine E-Mail vorhanden ist, reicht eine fiktive Eingabe z.B. xxx@xxx.ch",
       "JUSTIFICATION": "Begründung",
-      "ATTATCHMENT_INFO": "Sie können die Stellungnahme mit PDF-Anhang einreichen.",
-      "ATTATCHMENT_BUTTON": "PDF anhängen",
+      "ATTACHMENT_INFO": "Sie können die Stellungnahme mit PDF-Anhang einreichen.",
+      "ATTACHMENT_BUTTON": "PDF anhängen",
       "ORGANISATION": "Organisation/Vereinigung",
       "ZIP": "PLZ",
       "CITY": "Ort/Stadt",
