--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -624,8 +624,8 @@
       "E_MAIL": "Courrier électronique",
       "E_MAIL_TEXT": "Si aucun e-mail n'est disponible, une entrée fictive, par exemple xxx@xxx.ch, suffit.",
       "JUSTIFICATION": "Justification",
-      "ATTATCHMENT_INFO": "Vous pouvez envoyer votre avis avec une annexe PDF.",
-      "ATTATCHMENT_BUTTON": "Joindre un PDF",
+      "ATTACHMENT_INFO": "Vous pouvez envoyer votre avis avec une annexe PDF.",
+      "ATTACHMENT_BUTTON": "Joindre un PDF",
       "ORGANISATION": "Organisation/Association",
       "ZIP": "Code Postal",
       "CITY": "Lieu/ville",
