--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -624,8 +624,8 @@
       "E_MAIL": "E-Mail",
       "E_MAIL_TEXT": "Se non è disponibile un'e-mail, è sufficiente una voce fittizia, ad esempio xxx@xxx.ch.",
       "JUSTIFICATION": "Giustificazione",
-      "ATTATCHMENT_INFO": "È possibile inviare la dichiarazione con un allegato PDF.",
-      "ATTATCHMENT_BUTTON": "Allegare un PDF",
+      "ATTACHMENT_INFO": "È possibile inviare la dichiarazione con un allegato PDF.",
+      "ATTACHMENT_BUTTON": "Allegare un PDF",
       "ORGANISATION": "Organizzazione/associazione",
       "ZIP": "CAP",
       "CITY": "Luogo/Città",
