--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -566,12 +566,16 @@
     },
     "DIALOG": {
       "NEW_PLAN_TIMETABLE": "Creare un nuovo calendario udienza",
+      "PLAN_INFO": "Calendario consultazioni anno",
       "PLAN_DROPDOWN_TITLE": "Orario",
       "PLAN_DROPDOWN_DESCRIPTION": "Seleziona anno",
       "DATUM_FROM": "Audizione di",
+      "DATUM_FROM_INFO": "Calendario udienza di",
       "DATUM_FROM_EXAMPLE": "p.e. 31.12.2023.",
-      "DATUM_UNTIL": "Sentire fino a",
-      "DATUM_UNTIL_EXAMPLE": "p.e. 31.12.2023."
+      "DATUM_TO": "Sentire fino a",
+      "DATUM_TO_INFO": "Orario udienza fino al",
+      "DATUM_UNTIL_EXAMPLE": "p.e. 31.12.2023.",
+      "SAVE": "Salvare"
     },
     "SELECT_CANTON": "Selezionare il Cantone",
     "SELECT_YEAR": "Selezionare l'anno",
