ATLAS-1171: fix bugs

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -555,7 +555,7 @@
     },
     "SELECT_CANTON": "Kanton auswählen",
     "SELECT_YEAR": "Jahr auswählen",
-    "TABLE_RESULT_HEADING": "{{totalCount}} Stellungnahmen für Fahrplanjahr {{year}}",
+    "TABLE_RESULT_HEADING": "{{totalCount}} Stellungnahmen für das Fahrplanjahr {{year}}",
     "TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX": "{{totalCount}} Stellungnahmen ",
     "WHOLE_SWISS": "gesamte Schweiz",
     "OPEN": "{{canton}} öffnen",
