--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -555,9 +555,9 @@
     },
     "SELECT_CANTON": "Sélectionner le canton",
     "SELECT_YEAR": "Sélectionner l'année",
-    "TABLE_RESULT_HEADING": "{{totalCount}} Stellungnahmen für Fahrplanjahr {{year}}",
-    "TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX": "{{totalCount}} Stellungnahmen ",
-    "WHOLE_SWISS": "gesamte Schweiz",
+    "TABLE_RESULT_HEADING": "{{totalCount}} Prises de position pour l'année d'horaire {{year}}",
+    "TABLE_RESULT_ACTUAL_HEARING_HEADING_PREFIX": "{{totalCount}} Prises de position ",
+    "WHOLE_SWISS": "Pour toute la Suisse",
     "OPEN": "{{canton}} ouvrir",
     "STATEMENT_STATUS_HEADER": "Statut",
     "SWISS_CANTON": "Canton",
