ATLAS-1012: Rename some variables.

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -569,12 +569,12 @@
       "PLAN_INFO": "Fahrplananhörung Jahr",
       "PLAN_DROPDOWN_TITLE": "Fahrplan",
       "PLAN_DROPDOWN_DESCRIPTION": "Jahr auswählen",
-      "DATUM_FROM": "Anhörung von",
-      "DATUM_FROM_INFO": "Fahrplananhörung von",
-      "DATUM_FROM_EXAMPLE": "z.B. 31.12.2023.",
-      "DATUM_TO": "Anhörung bis",
-      "DATUM_TO_INFO": "Fahrplananhörung bis",
-      "DATUM_UNTIL_EXAMPLE": "z.B. 31.12.2023.",
+      "HEARING_FROM": "Anhörung von",
+      "HEARING_FROM_INFO": "Fahrplananhörung von",
+      "HEARING_FROM_EXAMPLE": "01.01.2023.",
+      "HEARING_UNTIL": "Anhörung bis",
+      "HEARING_UNTIL_INFO": "Fahrplananhörung bis",
+      "HEARING_UNTIL_EXAMPLE": "31.12.2023.",
       "SAVE": "Speichern",
       "NOTIFICATION_SUCCESS": "Fahrplananhörung erfolgreich gespeichert"
     },
