--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -569,13 +569,14 @@
       "PLAN_INFO": "Calendrier consultation année",
       "PLAN_DROPDOWN_TITLE": "Calendrier",
       "PLAN_DROPDOWN_DESCRIPTION": "Sélectionner l'année",
-      "DATUM_FROM": "Audition de",
-      "DATUM_FROM_INFO": "Calendrier audience de",
-      "DATUM_FROM_EXAMPLE": "p.ex. 31.12.2023.",
-      "DATUM_TO": "Audience jusqu'à",
-      "DATUM_TO_INFO": "Calendrier audience jusqu'au",
-      "DATUM_UNTIL_EXAMPLE": "p.ex. 31.12.2023.",
-      "SAVE": "Sauvegarder"
+      "HEARING_FROM": "Audition de",
+      "HEARING_FROM_INFO": "Calendrier audience de",
+      "HEARING_FROM_EXAMPLE": "01.01.2023.",
+      "HEARING_UNTIL": "Audience jusqu'à",
+      "HEARING_UNTIL_INFO": "Calendrier audience jusqu'au",
+      "HEARING_UNTIL_EXAMPLE": "31.12.2023.",
+      "SAVE": "Sauvegarder",
+      "NOTIFICATION_SUCCESS": "Consultation des horaires enregistrée avec succès"
     },
     "SELECT_CANTON": "Sélectionner le canton",
     "SELECT_YEAR": "Sélectionner l'année",
