--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -569,13 +569,14 @@
       "PLAN_INFO": "Calendario consultazioni anno",
       "PLAN_DROPDOWN_TITLE": "Orario",
       "PLAN_DROPDOWN_DESCRIPTION": "Seleziona anno",
-      "DATUM_FROM": "Audizione di",
-      "DATUM_FROM_INFO": "Calendario udienza di",
-      "DATUM_FROM_EXAMPLE": "p.e. 31.12.2023.",
-      "DATUM_TO": "Sentire fino a",
-      "DATUM_TO_INFO": "Orario udienza fino al",
-      "DATUM_UNTIL_EXAMPLE": "p.e. 31.12.2023.",
-      "SAVE": "Salvare"
+      "HEARING_FROM": "Audizione di",
+      "HEARING_FROM_INFO": "Calendario udienza di",
+      "HEARING_FROM_EXAMPLE": "01.01.2023.",
+      "HEARING_UNTIL": "Sentire fino a",
+      "HEARING_UNTIL_INFO": "Orario udienza fino al",
+      "HEARING_UNTIL_EXAMPLE": "31.12.2023.",
+      "SAVE": "Salvare",
+      "NOTIFICATION_SUCCESS": "Consultazione orario salvata con successo"
     },
     "SELECT_CANTON": "Selezionare il Cantone",
     "SELECT_YEAR": "Selezionare l'anno",
