ATLAS-1014: impl changeStatus dialog

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -531,6 +531,11 @@
     }
   },
   "TTH": {
+    "DIALOG": {
+      "STATUS_CHANGE": "Status ändern",
+      "COMMENT_LABEL": "Kommentar dazu (optional)",
+      "BACK": "Zurück"
+    },
     "TAB": {
       "ACTUAL": "Aktuelle Anhörung",
       "PLANNED": "Geplante Anhörungen",
