ATLAS-1014: update layout and language

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -534,7 +534,8 @@
     "DIALOG": {
       "STATUS_CHANGE": "Status ändern",
       "COMMENT_LABEL": "Kommentar dazu (optional)",
-      "BACK": "Zurück"
+      "BACK": "Zurück",
+      "STATUS_CHANGE_MESSAGE": "Sie ändern die ausgewählte Stellungnahme."
     },
     "TAB": {
       "ACTUAL": "Aktuelle Anhörung",
