--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -531,6 +531,12 @@
     }
   },
   "TTH": {
+    "DIALOG": {
+      "STATUS_CHANGE": "Modifier statut",
+      "COMMENT_LABEL": "Commentaire à ce sujet (facultatif)",
+      "BACK": "De retour",
+      "STATUS_CHANGE_MESSAGE": "Vous modifiez l'avis sélectionné."
+    },
     "TAB": {
       "ACTUAL": "Audition actuelle",
       "PLANNED": "Audition prévue",
