--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -564,19 +564,21 @@
         }
       }
     },
-    "DIALOG": {
-      "NEW_PLAN_TIMETABLE": "Neue Fahrplananhörung anlegen",
-      "PLAN_INFO": "Fahrplananhörung Jahr",
-      "PLAN_DROPDOWN_TITLE": "Fahrplan",
-      "PLAN_DROPDOWN_DESCRIPTION": "Jahr auswählen",
-      "HEARING_FROM": "Anhörung von",
-      "HEARING_FROM_INFO": "Fahrplananhörung von",
-      "HEARING_FROM_EXAMPLE": "01.01.2023.",
-      "HEARING_UNTIL": "Anhörung bis",
-      "HEARING_UNTIL_INFO": "Fahrplananhörung bis",
-      "HEARING_UNTIL_EXAMPLE": "31.12.2023.",
-      "SAVE": "Speichern",
-      "NOTIFICATION_SUCCESS": "Fahrplananhörung erfolgreich gespeichert"
+    "NEW_YEAR": {
+      "DIALOG": {
+        "NEW_PLAN_TIMETABLE": "Neue Fahrplananhörung anlegen",
+        "PLAN_INFO": "Fahrplananhörung Jahr",
+        "PLAN_DROPDOWN_TITLE": "Fahrplan",
+        "PLAN_DROPDOWN_DESCRIPTION": "Jahr auswählen",
+        "HEARING_FROM": "Anhörung von",
+        "HEARING_FROM_INFO": "Fahrplananhörung von",
+        "HEARING_FROM_EXAMPLE": "01.01.2023.",
+        "HEARING_UNTIL": "Anhörung bis",
+        "HEARING_UNTIL_INFO": "Fahrplananhörung bis",
+        "HEARING_UNTIL_EXAMPLE": "31.12.2023.",
+        "SAVE": "Speichern",
+        "NOTIFICATION_SUCCESS": "Fahrplananhörung erfolgreich gespeichert"
+      }
     },
     "SELECT_CANTON": "Kanton auswählen",
     "SELECT_YEAR": "Jahr auswählen",
