--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -531,9 +531,14 @@
     }
   },
   "TTH": {
+    "NOTIFICATION": {
+      "STATUS_CHANGE": {
+        "SUCCESS": "Lo stato è stato modificato con successo"
+      }
+    },
     "DIALOG": {
       "STATUS_CHANGE": "Modificare lo stato",
-      "COMMENT_LABEL": "Commento (facoltativo)",
+      "COMMENT_LABEL": "Commento",
       "BACK": "Indietro",
       "STATUS_CHANGE_MESSAGE": "Modifica la dichiarazioni per l'orario selezionata."
     },
