--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -571,7 +571,8 @@
       "ADD_NEW_STATEMENT": "Aggiungere nuovo parare",
       "ADD_NEW_TIMETABLE_HEARING": "Creare una nuova audizione",
       "START_TIMETABLE_HEARING": "Avviare questa audizione",
-      "CANCEL_COLLECTING_ACTION": "Terminare la campagna di raccolta"
+      "CANCEL_COLLECTING_ACTION": "Terminare la campagna di raccolta",
+      "CLOSE_TIMETABLE_HEARING": "__it__Fahrplanjahr schliessen"
     },
     "DROPDOWN": {
       "COLLECTING_STATUS_CHANGE_ACTION": {
