--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -534,7 +534,8 @@
     "NOTIFICATION": {
       "STATUS_CHANGE": {
         "SUCCESS": "Le statut a été modifié avec succès."
-      }
+      },
+      "NO_VERSION_VALID_AT": "Il n'y a pas de version valide de {{swissId}} au {{validAt}}. Veuillez vérifier la validité du numéro de champ d'horaire."
     },
     "DIALOG": {
       "STATUS_CHANGE": "Modifier statut",
