ATLAS-1013: wip: work on dialog button actions

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -16,6 +16,7 @@
   "COMMON": {
     "BACK_TO_OVERVIEW": "Zurück zur Übersicht",
     "SAVE": "Speichern",
+    "SAVE_AND_CLOSE": "Speichern & Schliessen",
     "ADD": "Hinzufügen",
     "EDIT": "Editieren",
     "REVOKE": "Fehlerfassung",
