ATLAS-1113: Initial commit.

--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -648,11 +648,12 @@
       "STOP_POINT": "Fermata",
       "STOP_POINT_INFO": "Descrizione della fermata di riferimento",
       "STATUS_JUSTIFICATION": "Stato e motivazioni",
-      "FIST_NAME": "Nome",
+      "FIRST_NAME": "Nome",
       "LAST_NAME": "Cognome",
       "E_MAIL": "E-Mail",
       "E_MAIL_TEXT": "Se non è disponibile un'e-mail, è sufficiente una voce fittizia, ad esempio xxx@xxx.ch.",
       "JUSTIFICATION": "Giustificazione",
+      "COMMENT": "Commento sul passaggio di consegne cantonale",
       "ATTACHMENT_INFO": "È possibile inviare la dichiarazione con un allegato PDF.",
       "ATTACHMENT_BUTTON": "Allegare un PDF",
       "ORGANISATION": "Organizzazione/associazione",
