--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -648,11 +648,12 @@
       "STOP_POINT": "Arrêt",
       "STOP_POINT_INFO": "Description de l'arrêt référencé",
       "STATUS_JUSTIFICATION": "Statut et justification",
-      "FIST_NAME": "Prénom",
+      "FIRST_NAME": "Prénom",
       "LAST_NAME": "Nom de famille",
       "E_MAIL": "Courrier électronique",
       "E_MAIL_TEXT": "Si aucun e-mail n'est disponible, une entrée fictive, par exemple xxx@xxx.ch, suffit.",
       "JUSTIFICATION": "Justification",
+      "COMMENT": "Commentaire sur la cession de canton",
       "ATTACHMENT_INFO": "Vous pouvez envoyer votre avis avec une annexe PDF.",
       "ATTACHMENT_BUTTON": "Joindre un PDF",
       "ORGANISATION": "Organisation/Association",
