ATLAS-1113: WIP implementation of dialog from the canton dropdown.

--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -664,6 +664,13 @@
       "NOTIFICATION": {
         "ADD_SUCCESS": "Neue Stellungnahme erfolgreich gespeichert.",
         "EDIT_SUCCESS": "Die Stellungnahme wurde erfolgreich gespeichert."
+      },
+      "DIALOG": {
+        "TITLE": "Status ändern",
+        "TEXT": "Sie ändern ausgewählte Stellungnahmen.",
+        "COMMENT_LABEL": "Kommentar dazu (optional)",
+        "CANCEL": "Zurück",
+        "CONFIRM": "Status ändern"
       }
     }
   }
