--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -666,11 +666,11 @@
         "EDIT_SUCCESS": "Die Stellungnahme wurde erfolgreich gespeichert."
       },
       "DIALOG": {
-        "TITLE": "Status ändern",
-        "TEXT": "Sie ändern ausgewählte Stellungnahmen.",
+        "TITLE": "Kanton ändern",
+        "TEXT": "Sie ändern die Kantonszuordnung der ausgewählten Stellungnahme. Mit der Übertragung verlieren Sie die Editierrechte für diese Stellungnahme.",
         "COMMENT_LABEL": "Kommentar dazu (optional)",
         "CANCEL": "Zurück",
-        "CONFIRM": "Status ändern"
+        "CONFIRM": "Kanton ändern"
       }
     }
   }
