--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -666,11 +666,11 @@
         "EDIT_SUCCESS": "Il parare è stato salvato con successo."
       },
       "DIALOG": {
-        "TITLE": "Cambiare stato",
-        "TEXT": "Si modificano le istruzioni selezionate.",
+        "TITLE": "Cambia cantone",
+        "TEXT": "Si modifica l'attribuzione cantonale dell'estratto conto selezionato. Con la trasmissione perdi i diritti di modifica per questa dichiarazione.",
         "COMMENT_LABEL": "Commenta (facoltativo)",
         "CANCEL": "Ritorno",
-        "CONFIRM": "Cambiare stato"
+        "CONFIRM": "Cambia cantone"
       }
     }
   }
