--- a/frontend/src/assets/i18n/de.json
+++ b/frontend/src/assets/i18n/de.json
@@ -565,9 +565,13 @@
       "MANAGE_TIMETABLE_HEARING": "Steuerung Fahrplananhörung",
       "ADD_NEW_STATEMENT": "Neue Stellungnahme erfassen",
       "ADD_NEW_TIMETABLE_HEARING": "Neue Fahrplananhörung anlegen",
-      "START_TIMETABLE_HEARING": "Dieses Fahrplanjahr starten"
+      "START_TIMETABLE_HEARING": "Dieses Fahrplanjahr starten",
+      "CANCEL_COLLECTING_ACTION": "Sammelaktion beenden"
     },
     "DROPDOWN": {
+      "COLLECTING_STATUS_CHANGE_ACTION": {
+        "PLACEHOLDER": "Status der Auswahl ändern"
+      },
       "COLLECTING_ACTION": {
         "PLACEHOLDER": "Sammelaktionen",
         "OPTION": {
