--- a/frontend/src/assets/i18n/it.json
+++ b/frontend/src/assets/i18n/it.json
@@ -565,9 +565,13 @@
       "MANAGE_TIMETABLE_HEARING": "Amministrare le audizioni",
       "ADD_NEW_STATEMENT": "Aggiungere nuovo parare",
       "ADD_NEW_TIMETABLE_HEARING": "Creare una nuova audizione",
-      "START_TIMETABLE_HEARING": "Avviare questa audizione"
+      "START_TIMETABLE_HEARING": "Avviare questa audizione",
+      "CANCEL_COLLECTING_ACTION": "Terminare la campagna di raccolta"
     },
     "DROPDOWN": {
+      "COLLECTING_STATUS_CHANGE_ACTION": {
+        "PLACEHOLDER": "Modificare lo stato della selezione"
+      },
       "COLLECTING_ACTION": {
         "PLACEHOLDER": "Raccolta di azioni",
         "OPTION": {
