--- a/frontend/src/assets/i18n/fr.json
+++ b/frontend/src/assets/i18n/fr.json
@@ -668,7 +668,7 @@
       "DIALOG": {
         "TITLE": "Changer de canton",
         "TEXT": "Vous modifiez l'affectation cantonale de l'instruction sélectionnée. Avec la transmission, vous perdez les droits d'édition de cette déclaration.",
-        "COMMENT_LABEL": "Commentez-le (facultatif)",
+        "COMMENT_LABEL": "Commentez-le",
         "CANCEL": "Retour",
         "CONFIRM": "Changer de canton"
       }
